--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Buffstreams – Watch Live Sports Streams Free (NBA, NFL, NHL, MLB, Soccer & More)</title>
+    <title>Buffstreams – Live Sports Streams Free (NBA, NFL, NHL, MLB, CFB )</title>
     <meta name="description"
         content="Watch free live sports streams on Buffstreams – NBA, NFL, NHL, MLB, Soccer, MMA, Boxing and more in HD. Stream your favorite matches live, anywhere, anytime." />
     <meta name="keywords"
