--- a/stream.html
+++ b/stream.html
@@ -213,7 +213,20 @@
             <h1 id="page-title">Live Stream</h1>
         </div>
 
-        <div class="ad-top">🔸 Advertisement Space (Top Banner 728x90) 🔸</div>
+        <div class="ad-top">🔸
+            <script type="text/javascript">
+                atOptions = {
+                    'key': 'abb0663c144067f9d6ac13c0778a9976',
+                    'format': 'iframe',
+                    'height': 90,
+                    'width': 728,
+                    'params': {}
+                };
+            </script>
+            <script type="text/javascript"
+                src="//contemplatewaryheadquarter.com/abb0663c144067f9d6ac13c0778a9976/invoke.js"></script> (Top Banner
+            728x90) 🔸
+        </div>
 
         <div class="player-area">
             <div class="side-ad">Ad Space<br>(160x600)</div>
