--- a/stream.html
+++ b/stream.html
@@ -224,8 +224,7 @@
                 };
             </script>
             <script type="text/javascript"
-                src="//contemplatewaryheadquarter.com/abb0663c144067f9d6ac13c0778a9976/invoke.js"></script> (Top Banner
-            728x90) 🔸
+                src="//contemplatewaryheadquarter.com/abb0663c144067f9d6ac13c0778a9976/invoke.js"></script> 🔸
         </div>
 
         <div class="player-area">
