--- a/stream.html
+++ b/stream.html
@@ -228,16 +228,7 @@
         </div>
 
         <div class="player-area">
-            <div class="side-ad"><script type="text/javascript">
-	atOptions = {
-		'key' : 'ba1b8945cf8f8d64efc2b4674ed5d2f8',
-		'format' : 'iframe',
-		'height' : 600,
-		'width' : 160,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//contemplatewaryheadquarter.com/ba1b8945cf8f8d64efc2b4674ed5d2f8/invoke.js"></script></div>
+            <div class="side-ad">Ad Space<br>(160x600)</div>
 
             <div class="stream-player" id="stream-iframe">
                 <div
@@ -249,29 +240,10 @@
                 </div>
             </div>
 
-            <div class="side-ad">Ad Space<br><script type="text/javascript">
-	atOptions = {
-		'key' : 'ba1b8945cf8f8d64efc2b4674ed5d2f8',
-		'format' : 'iframe',
-		'height' : 600,
-		'width' : 160,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//contemplatewaryheadquarter.com/ba1b8945cf8f8d64efc2b4674ed5d2f8/invoke.js"></script>/div>
+            <div class="side-ad">Ad Space<br>(160x600)</div>
         </div>
 
-        <div class="ad-bottom">🔸 <script type="text/javascript">
-	atOptions = {
-		'key' : 'ec394d79292a39b3444dc047ece9ba03',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//contemplatewaryheadquarter.com/ec394d79292a39b3444dc047ece9ba03/invoke.js"></script>
-<script type='text/javascript' src='//contemplatewaryheadquarter.com/b0/7a/57/b07a57263b4a842a75a6b17888eb68fe.js'></script> 🔸</div>
+        <div class="ad-bottom">🔸 Advertisement Space (Bottom Banner 728x90) 🔸</div>
 
         <div class="stream-info">
             <h2 id="event-title">Event Information</h2>
