--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Buffstreams – Live Sports Streams Free (NBA, NFL, NHL, MLB, CFB )</title>
+
+    <!-- Histats.com  START  (aync)-->
+    <script type="text/javascript">var _Hasync = _Hasync || [];
+        _Hasync.push(['Histats.start', '1,4913730,4,0,0,0,00010000']);
+        _Hasync.push(['Histats.fasi', '1']);
+        _Hasync.push(['Histats.track_hits', '']);
+        (function () {
+            var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+            hs.src = ('//s10.histats.com/js15_as.js');
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+        })();</script>
+    <noscript><a href="/" target="_blank"><img src="//sstatic1.histats.com/0.gif?4913730&101" alt="web hit counter"
+                border="0"></a></noscript>
+    <!-- Histats.com  END  -->
     <meta name="description"
         content="Watch free live sports streams on Buffstreams – NBA, NFL, NHL, MLB, Soccer, MMA, Boxing and more in HD. Stream your favorite matches live, anywhere, anytime." />
     <meta name="keywords"
@@ -14,7 +28,8 @@
     <meta name="author" content="Buffstreams Web" />
     <meta name="revisit-after" content="1 days" />
     <link rel="canonical" href="https://buffstreams-web.space/" />
-    <link rel="icon" href="https://play-lh.googleusercontent.com/21B-hXJ6pLkylP4tCIYOL2rGE9V_p6qS8mun2VH8gI2c1dSkNp8wxuglS19uydq_OM4a"
+    <link rel="icon"
+        href="https://play-lh.googleusercontent.com/21B-hXJ6pLkylP4tCIYOL2rGE9V_p6qS8mun2VH8gI2c1dSkNp8wxuglS19uydq_OM4a"
         type="image/x-icon">
 
     <meta name="google-site-verification" content="b93XiGFLGrGV6vx4u_dog7O0E0kK4rt56CXFNHyNJC8" />
