--- a/stream.html
+++ b/stream.html
@@ -2,9 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Live Stream - SportStreams</title>
+    <meta name="description"
+        content="Watch live sports stream in HD - NFL, NBA, Soccer, and more. Updated daily with ESPN schedule and TopEmbed links." />
     <style>
         * {
             margin: 0;
@@ -23,19 +25,17 @@
         .stream-container {
             max-width: 1200px;
             margin: 0 auto;
-            padding: 30px 20px 60px;
-            position: relative;
+            padding: 30px 15px 60px;
         }
 
         /* Header */
         .header {
             text-align: center;
-            margin-bottom: 2rem;
-            position: relative;
+            margin-bottom: 1.5rem;
         }
 
         .header h1 {
-            font-size: 2.5rem;
+            font-size: 2rem;
             color: #ff6b35;
             text-transform: uppercase;
             letter-spacing: 1px;
@@ -44,7 +44,7 @@
 
         @keyframes fadeInDown {
             from {
-                transform: translateY(-20px);
+                transform: translateY(-15px);
                 opacity: 0;
             }
 
@@ -54,18 +54,19 @@
             }
         }
 
-        /* Ad Spaces */
+        /* Ads */
         .ad-top,
         .ad-bottom {
             background: rgba(255, 255, 255, 0.05);
             border: 1px solid rgba(255, 255, 255, 0.1);
             color: #aaa;
             text-align: center;
-            padding: 15px;
+            padding: 12px;
             border-radius: 10px;
             margin: 15px 0;
             font-size: 0.9rem;
             transition: 0.3s;
+            overflow: hidden;
         }
 
         .ad-top:hover,
@@ -73,16 +74,17 @@
             background: rgba(255, 255, 255, 0.08);
         }
 
-        /* Stream Player Layout with Side Ads */
+        /* Player Layout */
         .player-area {
             display: flex;
             justify-content: center;
-            align-items: stretch;
+            align-items: flex-start;
             gap: 15px;
+            flex-wrap: wrap;
         }
 
         .side-ad {
-            width: 160px;
+            flex: 0 0 160px;
             background: rgba(255, 255, 255, 0.05);
             border-radius: 10px;
             padding: 10px;
@@ -91,6 +93,7 @@
             color: #bbb;
             border: 1px solid rgba(255, 255, 255, 0.1);
             transition: 0.3s;
+            min-height: 100px;
         }
 
         .side-ad:hover {
@@ -99,12 +102,20 @@
 
         .stream-player {
             flex: 1;
+            min-width: 300px;
             height: 600px;
             border-radius: 15px;
             background: #000;
             box-shadow: 0 0 20px rgba(255, 107, 53, 0.3);
             overflow: hidden;
-            transition: box-shadow 0.4s ease;
+            transition: 0.4s ease;
+            position: relative;
+        }
+
+        .stream-player iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
         }
 
         .stream-player:hover {
@@ -114,46 +125,41 @@
         /* Stream Info */
         .stream-info {
             background: rgba(255, 255, 255, 0.06);
-            padding: 1.8rem;
+            padding: 1.5rem;
             border-radius: 12px;
             backdrop-filter: blur(6px);
-            box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
-            transition: transform 0.3s ease;
             margin-top: 2rem;
-        }
-
-        .stream-info:hover {
-            transform: translateY(-5px);
+            box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
         }
 
         .stream-info h2 {
             color: #ff6b35;
-            font-size: 1.6rem;
-            margin-bottom: 1.2rem;
+            font-size: 1.4rem;
+            margin-bottom: 1rem;
             text-transform: uppercase;
         }
 
         .stream-meta {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-            gap: 1.2rem;
+            grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+            gap: 1rem;
         }
 
         .meta-item {
             background: rgba(255, 255, 255, 0.1);
-            padding: 1rem;
+            padding: 0.8rem;
             border-radius: 8px;
             text-align: center;
         }
 
         .meta-label {
-            font-size: 0.9rem;
+            font-size: 0.85rem;
             color: #b0b7c8;
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.3rem;
         }
 
         .meta-value {
-            font-size: 1.1rem;
+            font-size: 1rem;
             font-weight: 600;
         }
 
@@ -183,25 +189,36 @@
             transform: scale(1.05);
         }
 
-        /* Responsive */
+        /* Responsive Fixes */
         @media (max-width: 992px) {
-            .player-area {
-                flex-direction: column;
-                align-items: center;
+            .stream-player {
+                height: 450px;
             }
 
             .side-ad {
-                width: 100%;
-            }
-
-            .stream-player {
-                height: 400px;
+                flex: 1 1 100%;
             }
         }
 
-        @media (max-width: 480px) {
+        @media (max-width: 600px) {
             .stream-player {
-                height: 300px;
+                height: 320px;
+            }
+
+            .header h1 {
+                font-size: 1.5rem;
+            }
+
+            .ad-top,
+            .ad-bottom {
+                font-size: 0.8rem;
+                padding: 10px;
+            }
+        }
+
+        @media (max-width: 400px) {
+            .stream-player {
+                height: 250px;
             }
         }
     </style>
@@ -213,7 +230,8 @@
             <h1 id="page-title">Live Stream</h1>
         </div>
 
-        <div class="ad-top">🔸
+        <div class="ad-top">
+            🔸
             <script type="text/javascript">
                 atOptions = {
                     'key': 'abb0663c144067f9d6ac13c0778a9976',
@@ -225,56 +243,62 @@
             </script>
             <script type="text/javascript"
                 src="//contemplatewaryheadquarter.com/abb0663c144067f9d6ac13c0778a9976/invoke.js"></script>
-            <script type='text/javascript'
-                src='//contemplatewaryheadquarter.com/b0/7a/57/b07a57263b4a842a75a6b17888eb68fe.js'></script>
-
             🔸
         </div>
 
         <div class="player-area">
-            <div class="side-ad">Ad Space<br><script type="text/javascript">
-	atOptions = {
-		'key' : '5a402370de4c5b007a3e5504876dec91',
-		'format' : 'iframe',
-		'height' : 300,
-		'width' : 160,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//contemplatewaryheadquarter.com/5a402370de4c5b007a3e5504876dec91/invoke.js"></script></div>
+            <div class="side-ad">
+                <script type="text/javascript">
+                    atOptions = {
+                        'key': '5a402370de4c5b007a3e5504876dec91',
+                        'format': 'iframe',
+                        'height': 300,
+                        'width': 160,
+                        'params': {}
+                    };
+                </script>
+                <script type="text/javascript"
+                    src="//contemplatewaryheadquarter.com/5a402370de4c5b007a3e5504876dec91/invoke.js"></script>
+            </div>
 
             <div class="stream-player" id="stream-iframe">
                 <div
-                    style="width:100%;height:100%;display:flex;align-items:center;justify-content:center;background:#000;color:white;">
-                    <div style="text-align:center;">
-                        <h3>Loading Stream...</h3>
-                        <p>Please wait while we load the live stream</p>
-                    </div>
+                    style="display:flex;align-items:center;justify-content:center;height:100%;flex-direction:column;color:white;">
+                    <h3>Loading Stream...</h3>
+                    <p>Please wait while we load your live match</p>
                 </div>
             </div>
 
-            <div class="side-ad">Ad Space<br><script type="text/javascript">
-	atOptions = {
-		'key' : 'ba1b8945cf8f8d64efc2b4674ed5d2f8',
-		'format' : 'iframe',
-		'height' : 600,
-		'width' : 160,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//contemplatewaryheadquarter.com/ba1b8945cf8f8d64efc2b4674ed5d2f8/invoke.js"></script></div>
+            <div class="side-ad">
+                <script type="text/javascript">
+                    atOptions = {
+                        'key': 'ba1b8945cf8f8d64efc2b4674ed5d2f8',
+                        'format': 'iframe',
+                        'height': 600,
+                        'width': 160,
+                        'params': {}
+                    };
+                </script>
+                <script type="text/javascript"
+                    src="//contemplatewaryheadquarter.com/ba1b8945cf8f8d64efc2b4674ed5d2f8/invoke.js"></script>
+            </div>
         </div>
 
-        <div class="ad-bottom">🔸 <script type="text/javascript">
-	atOptions = {
-		'key' : 'ec394d79292a39b3444dc047ece9ba03',
-		'format' : 'iframe',
-		'height' : 60,
-		'width' : 468,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//contemplatewaryheadquarter.com/ec394d79292a39b3444dc047ece9ba03/invoke.js"></script>🔸</div>
+        <div class="ad-bottom">
+            🔸
+            <script type="text/javascript">
+                atOptions = {
+                    'key': 'ec394d79292a39b3444dc047ece9ba03',
+                    'format': 'iframe',
+                    'height': 60,
+                    'width': 468,
+                    'params': {}
+                };
+            </script>
+            <script type="text/javascript"
+                src="//contemplatewaryheadquarter.com/ec394d79292a39b3444dc047ece9ba03/invoke.js"></script>
+            🔸
+        </div>
 
         <div class="stream-info">
             <h2 id="event-title">Event Information</h2>
@@ -297,7 +321,7 @@
                 </div>
                 <div class="meta-item">
                     <div class="meta-label">Quality</div>
-                    <div class="meta-value" id="event-quality">Loading...</div>
+                    <div class="meta-value" id="event-quality">HD</div>
                 </div>
             </div>
         </div>
@@ -309,10 +333,10 @@
         const urlParams = new URLSearchParams(window.location.search);
         const eventData = {
             title: decodeURIComponent(urlParams.get('title') || 'Live Sports Event'),
-            channelName: decodeURIComponent(urlParams.get('channelName') || ''),
+            channelName: decodeURIComponent(urlParams.get('channelName') || 'TopEmbed'),
             embedUrl: decodeURIComponent(urlParams.get('embedUrl') || ''),
-            time: decodeURIComponent(urlParams.get('time') || 'Time TBD ET'),
-            league: decodeURIComponent(urlParams.get('league') || 'Sports'),
+            time: decodeURIComponent(urlParams.get('time') || 'TBD'),
+            league: decodeURIComponent(urlParams.get('league') || 'NFL'),
             status: decodeURIComponent(urlParams.get('status') || 'upcoming'),
             quality: decodeURIComponent(urlParams.get('quality') || 'HD')
         };
@@ -323,36 +347,27 @@
         document.getElementById('event-league').textContent = eventData.league;
         document.getElementById('event-channel').textContent = eventData.channelName;
         document.getElementById('event-quality').textContent = eventData.quality;
-
         const statusElement = document.getElementById('event-status');
         statusElement.textContent = eventData.status.toUpperCase();
         statusElement.className = `meta-value status-${eventData.status}`;
 
         function loadStream() {
             const streamContainer = document.getElementById('stream-iframe');
-
             if (eventData.embedUrl && eventData.embedUrl !== '') {
                 const iframe = document.createElement('iframe');
                 iframe.src = eventData.embedUrl;
-                iframe.width = '100%';
-                iframe.height = '100%';
-                iframe.frameBorder = '0';
                 iframe.allowFullscreen = true;
-                iframe.style.border = 'none';
-                iframe.allow = 'encrypted-media; autoplay; fullscreen';
+                iframe.allow = "autoplay; fullscreen; encrypted-media";
+                iframe.frameBorder = "0";
                 streamContainer.innerHTML = '';
                 streamContainer.appendChild(iframe);
             } else {
                 streamContainer.innerHTML = `
-          <div style="width:100%;height:100%;display:flex;align-items:center;justify-content:center;background:#1a1a1a;color:white;flex-direction:column;">
+          <div style="display:flex;align-items:center;justify-content:center;flex-direction:column;height:100%;background:#111;color:#fff;">
             <h3>Stream Not Available</h3>
-            <p>Selected channel is currently offline</p>
-            <p style="margin-top:20px;color:#ff6b35;">Please try another channel</p>
-            <a href="index.html" style="margin-top:15px;padding:10px 20px;background:#ff6b35;color:white;text-decoration:none;border-radius:5px;">
-              Back to Events
-            </a>
-          </div>
-        `;
+            <p>This channel is currently offline</p>
+            <a href="index.html" class="back-btn" style="margin-top:15px;">Back to Events</a>
+          </div>`;
             }
         }
 
