--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     <meta name="keywords"
         content="Buffstreams, live sports streams, NBA live, NFL live, NHL live, MLB streams, free sports streaming, watch sports online, Buffstreams NBA, Buffstreams NFL" />
     <meta name="robots" content="index, follow" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+
     <meta name="language" content="en" />
     <meta name="author" content="Buffstreams Web" />
     <meta name="revisit-after" content="1 days" />
