--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta name="language" content="en" />
     <meta name="author" content="Buffstreams Web" />
     <meta name="revisit-after" content="1 days" />
-    <link rel="canonical" href="https://buffstreams-web.space/" />
+    <link rel="canonical" href="https://v2.buffstreams.homes/" />
     <link rel="icon"
         href="https://play-lh.googleusercontent.com/21B-hXJ6pLkylP4tCIYOL2rGE9V_p6qS8mun2VH8gI2c1dSkNp8wxuglS19uydq_OM4a"
         type="image/x-icon">
@@ -42,24 +42,24 @@
     <meta property="og:title" content="Buffstreams – Watch Free Live Sports Streams Online" />
     <meta property="og:description"
         content="Stream all major sports live on Buffstreams: NBA, NFL, NHL, MLB, Soccer, and more." />
-    <meta property="og:image" content="https://buffstreams-web.space/images/preview.jpg" />
-    <meta property="og:url" content="https://buffstreams-web.space/" />
+    <meta property="og:image" content="https://v2.buffstreams.homes/images/preview.jpg" />
+    <meta property="og:url" content="https://v2.buffstreams.homes/" />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Buffstreams – Watch Live Sports Streams Free" />
     <meta name="twitter:description" content="Enjoy free live sports streams for NBA, NFL, MLB, and more." />
-    <meta name="twitter:image" content="https://buffstreams-web.space/images/preview.jpg" />
+    <meta name="twitter:image" content="https://v2.buffstreams.homes/images/preview.jpg" />
 
     <script type="application/ld+json">
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "Buffstreams",
-    "url": "https://buffstreams-web.space/",
+    "url": "https://v2.buffstreams.homes/",
     "potentialAction": {
       "@type": "SearchAction",
-      "target": "https://buffstreams-web.space/search?q={search_term_string}",
+      "target": "https://v2.buffstreams.homes/search?q={search_term_string}",
       "query-input": "required name=search_term_string"
     }
   }
